metadata/force-app/main/default/objects/Adobe_CC_Plugin_Key__c/Adobe_CC_Plugin_Key__c.object-meta.xml
<CustomObject>
    <label>Adobe CC Plugin Key</label>
    <nameField>
        <label>Adobe CC Plugin Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adobe CC Plugin Keys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>