metadata/force-app/main/default/objects/Adobe_CC_Plugin_Key__c/fields/Account1__c.field-meta.xml
<CustomField>
    <fullName>Account1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Adobe CC Plugin Keys</relationshipLabel>
    <relationshipName>Adobe_CC_Plugin_Keys</relationshipName>
    <type>Lookup</type>
</CustomField>