metadata/force-app/main/default/objects/Adobe_CC_Plugin_Key__c/fields/CSM_Email__c.field-meta.xml
<CustomField>
    <fullName>CSM_Email__c</fullName>
    <label>CSM Email</label>
    <type>Email</type>
</CustomField>