metadata/force-app/main/default/objects/Adobe_CC_Plugin_Key__c/fields/Current_User__c.field-meta.xml
<CustomField>
    <fullName>Current_User__c</fullName>
    <formula>$User.Id</formula>
    <label>Current User</label>
    <type>Text</type>
</CustomField>