metadata/force-app/main/default/objects/Adobe_CC_Plugin_Key__c/fields/Expired_Date__c.field-meta.xml
<CustomField>
    <fullName>Expired_Date__c</fullName>
    <formula>Opportunity__r.End_date_contract__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expired Date</label>
    <type>Date</type>
</CustomField>