metadata/force-app/main/default/objects/Adobe_CC_Plugin_Key__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <description>Indicates whether this key is currently active or not.</description>
    <formula>AND(
Expired_Date__c &gt; TODAY(),
Start_Date__c &lt;= TODAY()
)</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>