metadata/force-app/main/default/objects/Adobe_CC_Plugin_Key__c/fields/Key_given__c.field-meta.xml
<CustomField>
    <fullName>Key_given__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key given</label>
    <type>Checkbox</type>
</CustomField>