metadata/force-app/main/default/objects/Adobe_CC_Plugin_Key__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Adobe CC Plugin Keys</relationshipLabel>
    <relationshipName>Adobe_CC_Plugin_Keys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>