metadata/force-app/main/default/objects/Adobe_CC_Plugin_Key__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Used to identify the product associated with the license key.</description>
    <label>Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adobe CC Users (Silicon Publishing)</fullName>
            </value>
            <value>
                <fullName>Adobe CC Users (LinkrUI)</fullName>
            </value>
            <value>
                <fullName>Microsoft Office 365 Users</fullName>
            </value>
            <value>
                <fullName>Google Workspace Users</fullName>
            </value>
            <value>
                <fullName>LinkrUI Adobe Express Users</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>